Introduce code-accessible notification pattern & begin decoupling CMS dependencies * Change composer requirement for "silverstripe/cms" to "silverstripe/admin" * Allow notifications to be authored in the code (not database record dependant) * Refactor duplicate logic in NotificationService::sendNotification() & NotificationService::sendToUser() * Create hook for "notification trace" so that each user's notifications can be traced in the database * Allow channels to be enabled and disabled per SystemNotification * Assign Template per SystemNotification->Channel() * Remove template model from SystemNotification * Return the SystemNotification in SystemNotification::notify() * Use sender namespace to match default template * Add a way to set recipients to SystemNotification (consider using Groups/Roles) * Absorb NotificationService::$default_senders to NotificationService::$available_senders into new Channels pattern * Assign reference of Channel when Sender is instantiated

--- a/.upgrade.yml
+++ b/.upgrade.yml
@@ -2,9 +2,9 @@ mappings:
   NotificationAdmin:        Symbiote\Notifications\Controller\NotificationAdmin
   NotificationHelper:       Symbiote\Notifications\Helper\NotificationHelper
   SendNotificationJob:      Symbiote\Notifications\Job\SendNotificationJob
-  NotificationSender:       Symbiote\Notifications\Model\NotificationSender
+  NotificationSender:       Symbiote\Notifications\Sender\NotificationSender
   NotifiedOn:               Symbiote\Notifications\Model\NotifiedOn
   SystemNotification:       Symbiote\Notifications\Model\SystemNotification
-  EmailNotificationSender:  Symbiote\Notifications\Service\EmailNotificationSender
+  EmailNotificationSender:  Symbiote\Notifications\Sender\EmailNotificationSender
   NotificationService:      Symbiote\Notifications\Service\NotificationService
   CheckEmailNotifications:  Symbiote\Notifications\Task\CheckEmailNotifications
